--- a/resume.html
+++ b/resume.html
@@ -36,7 +36,17 @@
 							<!-- Content -->
 								<div >
 									<section style="margin-bottom: 0;">
-										<embed class="container" src="lokeswar_gahir_resume.pdf" width="500" height="400">
+										<!-- <object data="lokeswar_gahir_resume.pdf" type="application/pdf" width="100%" height="700px"> -->
+											<!-- <embed src="lokeswar_gahir_resume.pdf" ></embed> -->
+										<!-- </object> -->
+										<!-- <embed class="container" src="lokeswar_gahir_resume.pdf" width="500" height="400"> -->
+											<iframe
+											src="https://drive.google.com/viewerng/viewer?&embedded=true&url=https://cdn.jsdelivr.net/gh/lokeswar-gahir/p-website@master/lokeswar_gahir_resume.pdf"
+											frameBorder="0"
+											scrolling="auto"
+											height="500"
+											width="100%"
+										></iframe>
 									</section>
 								</div>
 
