--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		
 	</head>
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
@@ -31,15 +32,11 @@
 					</header>
 
 					<!-- One -->
-						<section class="wrapper style4 container">
+						<section class="wrapper style4 container" id="main-one">
 
 							<!-- Content -->
 								<div >
 									<section style="margin-bottom: 0;">
-										<!-- <object data="lokeswar_gahir_resume.pdf" type="application/pdf" width="100%" height="700px"> -->
-											<!-- <embed src="lokeswar_gahir_resume.pdf" ></embed> -->
-										<!-- </object> -->
-										<!-- <embed class="container" src="lokeswar_gahir_resume.pdf" width="500" height="400"> -->
 											<iframe
 											src="https://drive.google.com/viewerng/viewer?&embedded=true&url=https://cdn.jsdelivr.net/gh/lokeswar-gahir/p-website@master/lokeswar_gahir_resume.pdf"
 											frameBorder="0"
