added the tic-tac-toe project and project image background changed  to slight grey from that dirty one

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 											<h3><a href="https://qrcode-generateor.streamlit.app/" target="_blank"><strong>QR Code Generator</strong></a></h3>
 										</header>
 										<p class="collapse-on-hover">
-											This QR code generator is a tool that creates Quick Response (QR) codes, which are two-dimensional barcodes that can store various types of information, such as website URLs, contact information, or plain text. To use a QR code generator, you typically input the desired information or content and choose any customization options, such as size, color, or design. The generator then processes this information and creates a unique QR code image that can be downloaded or directly embedded into documents, websites, or other digital platforms. Users can then scan the QR code with a smartphone or QR code scanner to access the stored information quickly and conveniently.
+											This application is a tool that creates Quick Response (QR) codes, which are two-dimensional barcodes that can store various types of information, such as website URLs, contact information, or plain text. To use a QR code generator, you typically input the desired information or content and choose any customization options, such as size, color. The generator then processes this information and creates a unique QR code image that can be downloaded. Users can then scan the QR code with a smartphone or QR code scanner to access the stored information quickly and conveniently.
 										</p>
 									</section>
 
@@ -222,6 +222,19 @@
 										</header>
 										<p class="collapse-on-hover">
 											The clipping process typically involves comparing each geometric primitive (such as lines, polygons, or curves) against a clipping region or window defined by the viewport or other boundaries. Geometric primitives that fall entirely within this region are retained, while those that extend beyond it are clipped or truncated to fit within the boundaries.
+										</p>
+									</section>
+
+								</div>
+								<div class="col-6 col-12-narrower">
+
+									<section>
+										<a href="https://tic-tac-toe-101.streamlit.app/" target="_blank" class="image featured"><img src="images/tic-tac-toe.jpg" alt="Tic-Tac-Toe (with AI)" /></a>
+										<header>
+											<h3><a href="https://tic-tac-toe-101.streamlit.app/" target="_blank"><strong>Tic-Tac-Toe (with AI)</strong></a></h3>
+										</header>
+										<p class="collapse-on-hover">
+											This project is a Tic-Tac-Toe game implementation that features an artificial intelligence (AI) opponent powered by the Minimax algorithm, capable of playing optimally against a human player. Tic-Tac-Toe is a classic game where two players take turns on a 3x3 grid, aiming to get three of their symbols in a row, column, or diagonal.
 										</p>
 									</section>
 
